RESOLVED FIXED227612
REGRESSION (r279477): WebKit_iosmac failed to build in : ModelElementControllerCocoa.mm:58:24: member reference type 'WebKit::WebPageProxy' is not a pointer; did you mean to use '.'?
https://bugs.webkit.org/show_bug.cgi?id=227612
Summary REGRESSION (r279477): WebKit_iosmac failed to build in : ModelElementControll...
Antoine Quint
Reported 2021-07-02 00:26:43 PDT
REGRESSION (r279477): WebKit_iosmac failed to build in : ModelElementControllerCocoa.mm:58:24: member reference type 'WebKit::WebPageProxy' is not a pointer; did you mean to use '.'?
Attachments
Patch (1.64 KB, patch)
2021-07-02 00:27 PDT, Antoine Quint
no flags
Patch for landing (1.60 KB, patch)
2021-07-02 00:47 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-07-02 00:27:37 PDT
Antoine Quint
Comment 2 2021-07-02 00:27:42 PDT
Antoine Quint
Comment 3 2021-07-02 00:47:29 PDT
Created attachment 432769 [details] Patch for landing
EWS
Comment 4 2021-07-02 01:13:54 PDT
Committed r279501 (239353@main): <https://commits.webkit.org/239353@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432769 [details].
Note You need to log in before you can comment on or make changes to this bug.