REGRESSION (r279477): WebKit_iosmac failed to build in : ModelElementControllerCocoa.mm:58:24: member reference type 'WebKit::WebPageProxy' is not a pointer; did you mean to use '.'? https://bugs.webkit.org/show_bug.cgi?id=227612 <rdar://problem/80054936>

Reviewed by Alan Bujtas.

* UIProcess/Cocoa/ModelElementControllerCocoa.mm:
(WebKit::ModelElementController::takeModelElementFullscreen):


Canonical link: https://commits.webkit.org/239353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279501 268f45cc-cd09-0410-ab3c-d52691b4dbfc